--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,10 +4,10 @@
   <%= f.error_notification %>
 
   <div class="form-group">
-    <%= f.input :name, required: true, autofocus: true, class : "form-control" %>
-    <%= f.input :email, required: true, class : "form-control" %>
-    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), class : "form-control" %>
-    <%= f.input :password_confirmation, required: true, class : "form-control" %>
+    <%= f.input :name, required: true, autofocus: true %>
+    <%= f.input :email, required: true %>
+    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
+    <%= f.input :password_confirmation, required: true %>
   </div>
 
   <div class="form-actions">
