done some styling with reg & session view and changes conversation for postgre

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,7 @@
 <h2>Sign up</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <img src="https://i.ytimg.com/vi/3ZMX3ImNt9g/hqdefault.jpg?custom=true&w=196&h=110&stc=true&jpg444=true&jpgq=90&sp=68&sigh=m1_UNn7DrUhaM7shiPBLUHg5Q2I"></img>
   <%= f.error_notification %>
 
   <div class="form-group">
